--- a/package.json
+++ b/package.json
@@ -1,13 +1,24 @@
 {
   "name": "nuxt-app",
-  "private": true,
   "type": "module",
+  "private": true,
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
+  },
+  "dependencies": {
+    "@nuxtjs/tailwindcss": "^6.11.2",
+    "@radix-icons/vue": "^1.0.0",
+    "@vueuse/nuxt": "^10.7.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "nuxt-icon": "^0.6.8",
+    "radix-vue": "^1.3.2",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.6.3",
@@ -16,15 +27,5 @@
     "shadcn-nuxt": "^0.8.7",
     "vue": "^3.4.14",
     "vue-router": "^4.2.5"
-  },
-  "dependencies": {
-    "@nuxtjs/tailwindcss": "^6.11.2",
-    "@radix-icons/vue": "^1.0.0",
-    "@vueuse/nuxt": "^10.7.2",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "radix-vue": "^1.3.2",
-    "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7"
   }
 }
