--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
   "dependencies": {
     "@nuxtjs/tailwindcss": "^6.11.2",
     "@radix-icons/vue": "^1.0.0",
+    "@vee-validate/zod": "^4.12.5",
+    "@vueuse/core": "^10.7.2",
     "@vueuse/nuxt": "^10.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "nuxt-icon": "^0.6.8",
     "radix-vue": "^1.3.2",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vee-validate": "^4.12.5",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.6.3",
