--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vee-validate/zod": "^4.12.5",
     "@vueuse/core": "^10.7.2",
     "@vueuse/nuxt": "^10.7.2",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "nuxt-icon": "^0.6.8",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.6.3",
+    "@types/bcryptjs": "^2.4.6",
     "eslint": "^8.56.0",
     "nuxt": "^3.9.3",
     "prisma": "^5.9.1",
