--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@auth/core": "^0.25.1",
+    "@hebilicious/authjs-nuxt": "^0.3.5",
     "@nuxtjs/tailwindcss": "^6.11.2",
     "@prisma/client": "5.9.1",
     "@radix-icons/vue": "^1.0.0",
