--- a/package.json
+++ b/package.json
@@ -24,14 +24,17 @@
     "clsx": "^2.1.0",
     "nuxt-icon": "^0.6.8",
     "radix-vue": "^1.3.2",
+    "resend": "^3.1.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^9.0.1",
     "vee-validate": "^4.12.5",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.6.3",
     "@types/bcryptjs": "^2.4.6",
+    "@types/uuid": "^9.0.8",
     "eslint": "^8.56.0",
     "nuxt": "^3.9.3",
     "prisma": "^5.9.1",
